bluetile (0.4.2-1) UNRELEASED; urgency=low

  * New upstream version

 -- Joachim Breitner <nomeata@debian.org>  Mon, 28 Jun 2010 09:44:42 +0200

bluetile (0.4.1-2) unstable; urgency=low

  * Install icon and .desktop files, register as window manager. (Closes:
    #586284)

 -- Joachim Breitner <nomeata@debian.org>  Thu, 17 Jun 2010 17:27:40 +0200

bluetile (0.4.1-1) unstable; urgency=low

  * Initial release.

 -- Joachim Breitner <nomeata@debian.org>  Fri, 11 Jun 2010 16:38:16 +0200