@@ -1,7 +1,0 @@
-[Desktop Entry]
-Encoding=UTF-8
-Name=Bluetile
-Comment=Tiling window manager
-Exec=bluetile
-Icon=bluetile.png
-Type=XSession
