@@ -1,10 +1,0 @@
-[Desktop Entry]
-Type=Application
-Encoding=UTF-8
-Name=Bluetile
-Exec=bluetile
-NoDisplay=true
-X-GNOME-WMName=bluetile
-X-GNOME-Autostart-Phase=WindowManager
-X-GNOME-Provides=windowmanager
-X-GNOME-Autostart-Notify=true
