@@ -1,6 +1,7 @@
 bluetile (0.4.2-1) UNRELEASED; urgency=low
 
   * New upstream version
+    + .desktop files included by upstream
 
  -- Joachim Breitner <nomeata@debian.org>  Mon, 28 Jun 2010 09:44:42 +0200
 
